examples/z_ShouldFail/TypeErrors/Naming4.java
class Naming4 {
    public static void main (String[] argv) {
        System.out.println(new A().f(new A(), 3));
    }
}

class A {
}

class A {
    int a;

    public int f (A b, int a) {
        return a;
    }
}
